fixed bug #145463 - "Search results look close to each other"